kubernetes/ingress/pact-broker-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pact-broker-ingress
  namespace: pact-broker
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pactbroker.ebruno.fr`) && PathPrefix(`/oauth2/`)
      priority: 20
      services:
        - name: oauth2-proxy-public
          port: http
    - kind: Rule
      match: Host(`pactbroker.ebruno.fr`) && !PathPrefix(`/oauth2/`)
      priority: 10
      middlewares:
        - name: fwd-auth
      services:
        - name: pact-broker
          port: http
  tls:
    certResolver: letsencrypt-ovh
